[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/textures/message-screen.png" type="Texture" id=1]
[ext_resource path="res://tests/message-screen.gd" type="Script" id=2]
[ext_resource path="res://ui/base-nodes/label-model.tscn" type="PackedScene" id=3]









[node name="MessageScreen" type="NinePatchRect"]
margin_left = -1.0
margin_right = 501.0
margin_bottom = 59.0
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
screen_text = "Ol√°, eu sou uma caixa de texto.
Aperte F6 e me veja funcionando
              :D"

[node name="LabelBaseModel" parent="." instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 3.0
margin_right = 0.0
margin_bottom = -1.0
text = "_"

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TextOnScreenTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="timeout" from="TextOnScreenTimer" to="." method="_on_TextOnScreenTimer_timeout"]
